# gym-manager

./: .env.dev  .env.prod  .gitignore  BUILD_INSTRUCTIONS.md  README.md  README_CLIENTE.md  README_NEW.md  README_OLD.md  alembic.ini  build_complete.bat  build_exe.bat  build_exe_simple.bat  build_exe_win7.bat  build_log.txt  build_poetry_complete.bat  cargar_datos_iniciales.py  crear_backup.py  create_manual_package.bat  create_portable_version.bat  fix_routine_table.sql  gym_manager.db  pyproject.toml  reporte_miembros_20250509_095505.xlsx  requirements.txt  reset_db.py  setup_win7.bat  test_connection.py
alembic/: env.py
alembic/versions/: 432e11afa4ba_initial_migration.py  f49e8b902ea4_add_cuota_mensual_table.py
backups/: backup_20250520_230359.sql  backup_20250520_232837.sql  backup_20250520_233736.sql  backup_20250527_195023.sql  backup_20250527_195122.sql  backup_20250527_195507.sql  backup_20250528_213201.sql  backup_20250528_213620.sql  backup_20250603_173400.sql  backup_20250603_184657.sql  backup_20250603_184857.sql  backup_20250605_204312.sql  backup_20250605_204429.sql  backup_20250617_202743.sql  backup_20250624_200801.sql  backup_20250710_190331.sql  backup_20250710_190814.sql  backup_20250805_180917.sql
exports/: pagos_20250507_193230.xlsx  pagos_20250507_193246.xlsx
gym_manager/: conexion_bd.py  config.py  main.py
gym_manager/components/: header.py  sidebar.py
gym_manager/controllers/: auth_controller.py  member_controller.py  monthly_fee_controller.py  payment_controller.py  payment_method_controller.py  payment_receipt_controller.py  routine_controller.py  statistics_controller.py  user_controller.py
gym_manager/database/: init_db.py
gym_manager/install/: schema.sql
gym_manager/migrations/: add_documento_rutina.py  alter_rutinas_documento.py  remove_id_miembro_rutinas.py  reset_database.py  run_migrations.py
gym_manager/models/: __init__.py  backup.py  member.py  monthly_fee.py  payment.py  payment_method.py  (+3 more)
migrations/: env.py
(+26 files in other folders)
