[tool.poetry]
name = "gym_manager"
version = "0.1.0"
description = "Sistema de gestión para gimnasios"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
alembic = "^1.15.0"
pydantic = "^2.10.6"
pymysql = "^1.1.1"
flet-easy = "^0.2.9"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
numpy = "^2.2.3"
dotenv = "^0.9.9"
cryptography = "^44.0.2"
flet = "^0.27.6"
werkzeug = "^3.1.3"
cairosvg = "^2.7.1"
pillow = "^11.2.1"
bcrypt = "^4.3.0"
fpdf = "^1.7.2"
plotly = "^6.1.2"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pylint = "^3.3.4"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "gym_manager.main:main"
dev = "gym_manager.main:run_dev"
prod = "gym_manager.main:run_prod"
alembic = "alembic.config:main"

